@@ -2,6 +2,7 @@
 v6.1.5-git
 ----------
 
+[mms] Fix populating search fields when editing an advanced search query.
 [mms] Trigger auto save draft in dynamic view if attachments have changed.
 [mms] SECURITY: Fix XSS in message and search screens resulting from a
       user-defined flag label (João Machado <geral@jpaulo.eu>).
